@@ -3,6 +3,16 @@
   "uniques": 0,
   "views": [
     {
+      "timestamp": "2026-01-19T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-20T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
       "timestamp": "2026-01-21T00:00:00Z",
       "count": 0,
       "uniques": 0
@@ -59,16 +69,6 @@
     },
     {
       "timestamp": "2026-02-01T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-02T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-03T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
